syntax = "proto3";
package Jde.App.Proto.FromServer;

import "google/protobuf/timestamp.proto";
import "Common.proto";
import "App.proto";

//////////////////////////////////////////////////////////////////////////////////////////////////////////

message Ack{
	uint32 session_id = 1;
	uint32 server_socket_id = 2;
}

message LogLevels{
	Jde.Proto.ELogLevel server=1;
	Jde.Proto.ELogLevel client=2;
}

message SessionInfo{
	google.protobuf.Timestamp expiration=1;
	uint32 session_id=2;
	uint32 user_pk=3;
	string user_endpoint=4;
	bool has_socket=5;
};

message Strings{
	repeated uint32 messages = 1;
	repeated uint32 files = 2;
	repeated uint32 functions = 3;
	repeated uint32 threads = 4;
}

////////////Web/////////////////
message TraceMessage{
	uint64 id=1;
	uint64 instance_id=2;
	google.protobuf.Timestamp time=3;
	Jde.Proto.ELogLevel level=4;
	uint32 message_id=5;
	uint32 file_id=6;
	uint32 function_id=7;
	uint32 line_number=8;
	uint32 user_pk=9;
	uint64 thread_id=10;
	repeated string variables=11;
}

message Traces{
	uint32 app_id=1;
	repeated TraceMessage values=2;
}

message Application{
	uint32 id=1;
	string name=2;
	Jde.Proto.ELogLevel db_level=3;
	Jde.Proto.ELogLevel file_level=4;
}

message Applications{
	repeated Application values=1;
}

message Status{
	uint32 application_id=1;
	uint32 instance_id=2;
	string host_name=3;
	google.protobuf.Timestamp start_time=4;
	uint64 memory=5;
	uint32 log_count=6;
	double cpu=7;
	Jde.Proto.ELogLevel db_log_level=8;
	Jde.Proto.ELogLevel file_log_level=9;
	repeated string values=10;
}

message Message{
	uint32 request_id=1;
	oneof Value{
		Ack ack = 2;
		string generic = 3;
		Strings strings = 4;
		LogLevels log_levels = 5;
		bytes custom = 6;
		double progress = 7;
		SessionInfo session_info = 8;
		uint32 add_session_result = 9;
		string graph_ql = 10;
		string exception = 11;
		Traces traces = 12;
		Applications applications = 13;
		Status status = 14;

		bytes execute_anonymous = 33;//appServer->2ndServer, no user context.
		Jde.App.Proto.Execute execute = 34;//execute with user context.
		bytes execute_response = 35;
	}
}

message Transmission{
	repeated Message Messages = 1;
}